--- a/main.css
+++ b/main.css
@@ -81,6 +81,7 @@ div#footer_wrapper {
 	border-top: 1px solid rgb(245, 245, 245);
     font-size: 80%;
     padding: 1% 20%;
+    min-width: 450px;
  }
 
 .button {
